--- a/myfirstbook/_config.yml
+++ b/myfirstbook/_config.yml
@@ -1,7 +1,7 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: My portfolio
+title: Data Science Portfolio
 author: Maria Mielniczuk
 logo: ""
 copyright: "2023"
